eks/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: wordpress-ingress
  #annotations:
  #  kubernetes.io/ingress.class: alb
spec:
  ingressClassName: alb
  rules:
    - host: api.authsamples-k8s.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress
                port:
                  number: 80
